--- a/index.html
+++ b/index.html
@@ -110,12 +110,61 @@
             0%, 100% { opacity: 0.7; }
             50% { opacity: 1; }
         }
+        /* NEW BLOG BUTTON STYLES */
+        .nav-buttons {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            gap: 15px;
+        }
+        .nav-button {
+            color: #00b4ff;
+            font-family: 'Courier New', monospace;
+            text-decoration: none;
+            text-shadow: 0 0 5px #0066ff;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 1rem;
+            padding: 5px;
+            opacity: 0.8;
+            transition: all 0.3s;
+        }
+        .nav-button:hover {
+            opacity: 1;
+            text-shadow: 0 0 8px #00b4ff;
+        }
+        .blog-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color: #00b4ff;
+            font-family: 'Courier New', monospace;
+            text-decoration: none;
+            text-shadow: 0 0 5px #0066ff;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 1rem;
+            padding: 5px;
+            opacity: 0.8;
+            transition: all 0.3s;
+        }
+        .blog-button:hover {
+            opacity: 1;
+            text-shadow: 0 0 8px #00b4ff;
+        }
     </style>
 </head>
 <body>
     <div class="header">
         <h1 class="title">INTERNET MONARCH</h1>
         <p class="quote">"Maybe we're even more screwed up than he was but in socially acceptable ways."</p>
+        <!-- NEW NAVIGATION BUTTONS -->
+        <div class="nav-buttons">
+        <a href="blog.html" class="blog-button">[BLOG]</a>
+        </div>
     </div>
 
     <div class="terminal-container">
