--- a/blog.html
+++ b/blog.html
@@ -89,6 +89,26 @@
             color: #00ff88;
             text-shadow: 0 0 5px #008844;
         }
+                .home-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color: #00b4ff;
+            font-family: 'Courier New', monospace;
+            text-decoration: none;
+            text-shadow: 0 0 5px #0066ff;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 1rem;
+            padding: 5px;
+            opacity: 0.8;
+            transition: all 0.3s;
+        }
+        .home-button:hover {
+            opacity: 1;
+            text-shadow: 0 0 8px #00b4ff;
+        }
     </style>
 </head>
 <body>
