--- a/blog.html
+++ b/blog.html
@@ -118,7 +118,6 @@
     </div>
 
     <div class="blog-container" id="blogContainer">
-        <!-- First two sample posts -->
         <div class="blog-post" style="animation-delay: 0.1s">
             <div class="blog-title">ENTRY 001</div>
             <div class="blog-date">03-09-2024</div>
@@ -150,7 +149,7 @@
             "> <span class='scripture'>— Jeremiah 29:11</span>"
         ];
 
-        // Generate 198 more blog posts (200 total)
+        // (200 total)
         const blogContainer = document.getElementById('blogContainer');
         const startDate = new Date(2020, 0, 7); // Starting after the first two posts
         
