--- a/index.html
+++ b/index.html
@@ -135,26 +135,27 @@
             opacity: 1;
             text-shadow: 0 0 8px #00b4ff;
         }
-        .blog-button {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            color: #00b4ff;
-            font-family: 'Courier New', monospace;
-            text-decoration: none;
-            text-shadow: 0 0 5px #0066ff;
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 1rem;
-            padding: 5px;
-            opacity: 0.8;
-            transition: all 0.3s;
-        }
-        .blog-button:hover {
-            opacity: 1;
-            text-shadow: 0 0 8px #00b4ff;
-        }
+.nav-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: #00b4ff;
+    font-family: 'Courier New', monospace;
+    text-decoration: none;
+    text-shadow: 0 0 5px #0066ff;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 5px;
+    opacity: 0.8;
+    transition: all 0.3s;
+}
+
+.nav-button:hover {
+    opacity: 1;
+    text-shadow: 0 0 8px #00b4ff;
+}
         .command-history {
             padding-left: 20px;
         }
@@ -166,7 +167,7 @@
         <p class="quote">"Maybe we're even more screwed up than he was but in socially acceptable ways."</p>
         <!-- NEW NAVIGATION BUTTONS -->
         <div class="nav-buttons">
-        <a href="blog.html" class="blog-button">[BLOG]</a>
+    <a href="blog.html" class="nav-button">[BLOG]</a>
         </div>
     </div>
 
