--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
                         "",
                         "INTERNET MONARCH v1.5 - A DIGITAL DAYDREAM",
                         "-----------------------------------------",
-                        "> A cybernetic dreamscape",
-                        "> Where reality glitches",
-                        "> And code becomes poetry",
+                        "> dreamscape",
+                        "> reality",
+                        "> code",
                         "",
-                        "> Built with broken keyboards",
+                        "> Built with a broken mind",
                         "> And too much caffeine",
                         ""
                     ];
