--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,20 @@
         .home-button:hover {
             opacity: 1;
             text-shadow: 0 0 8px #00b4ff;
-        }
+        } 
+                .blog-image {
+    max-width: 100%;
+    border: 1px solid #00b4ff;
+    margin: 10px 0;
+    box-shadow: 0 0 10px #0066ff;
+    filter: hue-rotate(180deg) contrast(1.2); /* Optional glitch effect */
+}.blog-video {
+    width: 100%;
+    max-width: 800px; /* Optional: Limit width */
+    border: 1px solid #00b4ff;
+    margin: 15px 0;
+    box-shadow: 0 0 10px #0066ff;
+}
 
     </style>
 </head>
