--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
         <h1 class="title">INTERNET MONARCH</h1>
         <p class="quote">"Maybe we're even more screwed up than he was but in socially acceptable ways."</p>
         <a href="blog.html" class="nav-button">[BLOG]</a>
+        <div class="header">
+    <h1 class="title">INTERNET MONARCH</h1>
+    <div class="nav">
+        <a href="about.html" style="color:#00ff88; text-decoration:none; margin-left:20px; text-shadow:0 0 5px #00ff88;">[ABOUT APE]</a>
+    </div>
+</div>
     </div>
 
     <div class="terminal-container">
