--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
         <a href="blog.html" class="nav-button">[BLOG]</a>
         <div class="header">
     <h1 class="title">INTERNET MONARCH</h1>
-    <div class="nav">
+ <div class="nav">
         <a href="about.html" style="color:#00ff88; text-decoration:none; margin-left:20px; text-shadow:0 0 5px #00ff88;">[ABOUT APE]</a>
+        <a href="blog.html" style="color:#00b4ff; text-decoration:none; margin-left:20px;">[BLOG]</a>
     </div>
 </div>
-    </div>
 
     <div class="terminal-container">
         <div class="terminal-line" style="animation-delay: 0s">SYSTEM v1.5</div>
