--- a/index.html
+++ b/index.html
@@ -142,14 +142,11 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="title">INTERNET MONARCH</h1>
-        <p class="quote">"Maybe we're even more screwed up than he was but in socially acceptable ways."</p>
-        <a href="blog.html" class="nav-button">[BLOG]</a>
-        <div class="header">
     <h1 class="title">INTERNET MONARCH</h1>
- <div class="nav">
-        <a href="about.html" style="color:#00ff88; text-decoration:none; margin-left:20px; text-shadow:0 0 5px #00ff88;">[ABOUT APE]</a>
-        <a href="blog.html" style="color:#00b4ff; text-decoration:none; margin-left:20px;">[BLOG]</a>
+    <p class="quote">"Maybe we're even more screwed up than he was but in socially acceptable ways."</p>
+    <div class="nav-buttons">
+        <a href="about.html" class="nav-button" style="color:#00ff88;">[ABOUT APE]</a>
+        <a href="blog.html" class="nav-button">[BLOG]</a>
     </div>
 </div>
 
