--- a/index.html
+++ b/index.html
@@ -138,6 +138,32 @@
             opacity: 0;
             pointer-events: none;
         }
+        .nav-buttons {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            gap: 15px;
+        }
+
+        .nav-button {
+            color: #00b4ff;
+            font-family: 'Courier New', monospace;
+            text-decoration: none;
+            text-shadow: 0 0 5px #0066ff;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 1rem;
+            padding: 5px;
+            opacity: 0.8;
+            transition: all 0.3s;
+        }
+
+        .nav-button:hover {
+            opacity: 1;
+            text-shadow: 0 0 8px #00b4ff;
+        }
     </style>
 </head>
 <body>
