--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             50% { opacity: 1; }
         }
         .nav-button {
-            position: absolute;
+            position: relative;
             top: 20px;
             right: 20px;
             color: #00b4ff;
