--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             50% { opacity: 1; }
         }
         .nav-button {
-            position: relative;
+            position: absolute;
             top: 20px;
             right: 20px;
             color: #00b4ff;
@@ -143,7 +143,7 @@
             top: 20px;
             right: 20px;
             display: flex;
-            gap: 15px;
+            gap: 30px;
         }
 
         .nav-button {
