--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
             opacity: 1;
             text-shadow: 0 0 8px #00b4ff;
         }
+                .command-history {
+            padding-left: 20px;
+        }
+        #hidden-input {
+            position: fixed;
+            opacity: 0;
+            pointer-events: none;
+        }
     </style>
 </head>
 <body>
