--- a/index.html
+++ b/index.html
@@ -158,10 +158,16 @@
             padding-left: 20px;
         }
         #hidden-input {
-            position: fixed;
-            opacity: 0;
-            pointer-events: none;
-        }
+    position: fixed;
+    opacity: 0;
+    pointer-events: none;
+    width: 0;
+    height: 0;
+    border: none;
+    outline: none;
+    padding: 0;
+    margin: 0;
+}
     </style>
 </head>
 <body>
