--- a/about.html
+++ b/about.html
@@ -80,7 +80,8 @@
 
     <div class="content-container">
         <!-- Ape Profile Image -->
-        <img src="media/images/Flowers.JPG" class="ape-image" alt="Ape">
+
+<img src="/media/images/Flowers.JPG" class="ape-image" alt="Ape">
 
         <!-- Ape Facts -->
         <div class="ape-fact">
