--- a/blog.html
+++ b/blog.html
@@ -171,9 +171,24 @@
 > .
     </div>
 </div>
+
+<div class="blog-post" style="animation-delay: 0.3s">
+    <div class="blog-title">ENTRY 004</div>
+    <div class="blog-date">00-00-0000</div>
+    <div class="blog-content">
+> New ideas.
+> I'm learning the software slowly.
+
+<video controls>
+  <source src="media/videos/GrrenVid.mp4" type="video/mp4">
+</video>
+
+> .
+    </div>
+</div>
         
         <div class="blog-post" style="animation-delay: 0.2s">
-            <div class="blog-title">ENTRY 004</div>
+            <div class="blog-title">ENTRY 005</div>
             <div class="blog-date">01-01-2024</div>
             <div class="blog-content">
 > The ball must fit through the hole, but once it fits through it must keep fitting through.
