--- a/blog.html
+++ b/blog.html
@@ -180,7 +180,7 @@
 > I'm learning the software slowly.
 
 <video controls>
-  <source src="media/videos/GrrenVid.mp4" type="video/mp4">
+  <source src="media/videos/GreenVid.mp4" type="video/mp4">
 </video>
 
 > .
