--- a/blog.html
+++ b/blog.html
@@ -252,7 +252,7 @@
             <div class="blog-date">17-06-2024</div>
             <div class="blog-content">
 > If I was to name three founding factors to my success it would be simple.
-> Today's post is more of a anonymous thank you to God, my father and some nigga on the internet.
+> Today's post is more of a anonymous thank you to God, my father and a real ass nigga on the internet.
 > Each of them have helped my life in different moments and in their own respective ways, but I surely won't forget any of them.
             </div>
         </div>
