--- a/blog.html
+++ b/blog.html
@@ -229,9 +229,8 @@
 > New ideas.
 > I'm learning the software slowly.
 
-<video class="blog-video" controls preload="none" loading="lazy">
-  <source src="media/videos/GreenVid.mp4" type="video/mp4">
-</video>
+<img class="blog-image" src="media/images/Eyes.jpg" alt="Emotional eyes" loading="lazy">
+
 
 > .
             </div>
