--- a/blog.html
+++ b/blog.html
@@ -226,8 +226,8 @@
             <div class="blog-title">ENTRY 004</div>
             <div class="blog-date">00-00-0000</div>
             <div class="blog-content">
-> New ideas.
-> I'm learning the software slowly.
+> Beginning, Equalibrium, End.
+> Coming at ya fast.
 
 <img class="blog-image" src="media/images/Eyes.jpg" alt="Emotional eyes" loading="lazy">
 
