--- a/blog.html
+++ b/blog.html
@@ -226,7 +226,7 @@
             <div class="blog-title">ENTRY 004</div>
             <div class="blog-date">00-00-0000</div>
             <div class="blog-content">
-> Beginning, Equalibrium, End.
+> Beginning, Equilibrium, End.
 > Coming at ya fast.
 
 <img class="blog-image" src="media/images/Eyes.jpg" alt="Emotional eyes" loading="lazy">
