--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
         <div class="nav-buttons">
             <a href="about.html" class="nav-button" style="color:#00ff88;">[ABOUT APE]</a>
             <a href="blog.html" class="nav-button">[BLOG]</a>
+            <a href="spotify.html" class="nav-button" style="color:#00ff88;">[SPOTIFY]</a>
         </div>
     </div>
 
