--- a/spotify.html
+++ b/spotify.html
@@ -524,7 +524,7 @@
 
         // Spotify API configuration
         const CLIENT_ID = '4fd59d9f62a94deb82340632ad0268b5'; 
-        const REDIRECT_URI = window.location.origin + window.location.pathname;
+        const REDIRECT_URI = "https://internetmonar.ch/spotify.html";  // Hardcoded
         const SCOPES = 'user-library-read playlist-read-private user-read-recently-played user-read-private';
 
         let accessToken = null;
