--- a/spotify.html
+++ b/spotify.html
@@ -568,10 +568,10 @@
             accessToken = null;
             
             const authURL = `https://accounts.spotify.com/authorize?` +
-                `client_id=${CLIENT_ID}&` +
+                `client_id=${4fd59d9f62a94deb82340632ad0268b5}&` +
                 `response_type=token&` +
-                `redirect_uri=${encodeURIComponent(REDIRECT_URI)}&` +
-                `scope=${encodeURIComponent(SCOPES)}&` +
+                `redirect_uri=${encodeURIComponent(https://internetmonar.ch/spotify.html&)}&` +
+                `scope=${encodeURIComponent(user-library-read playlist-read-private user-read-recently-played user-read-private)}&` +
                 `show_dialog=true`; // Added show_dialog to ensure fresh login
             
             window.location.href = authURL;
