--- a/spotify.html
+++ b/spotify.html
@@ -567,11 +567,11 @@
             // First, clear any existing token
             accessToken = null;
             
-            const authURL = `https://accounts.spotify.com/authorize?` +
-                `client_id=${4fd59d9f62a94deb82340632ad0268b5}&` +
-                `response_type=token&` +
-                `redirect_uri=${encodeURIComponent(https://internetmonar.ch/spotify.html&)}&` +
-                `scope=${encodeURIComponent(user-library-read playlist-read-private user-read-recently-played user-read-private)}&` +
+            const authURL = `https://accounts.spotify.com/authorize?` 
+                `client_id=4fd59d9f62a94deb82340632ad0268b5&` 
+                `response_type=token&` 
+                `redirect_uri=https://internetmonar.ch/spotify.html&)}&` 
+                `scope=user-read-private` 
                 `show_dialog=true`; // Added show_dialog to ensure fresh login
             
             window.location.href = authURL;
