--- a/spotify.html
+++ b/spotify.html
@@ -566,7 +566,7 @@ function loginWithSpotify() {
     const authURL = `https://accounts.spotify.com/authorize?` +
         `client_id=${4fd59d9f62a94deb82340632ad0268b5}&` +
         `response_type=token&` +
-        `redirect_uri=${encodeURIComponent(https://internetmonar.ch/spotify.html)}&` +
+        `redirect_uri=${encodeURIComponent('https:' + '//internetmonar.ch/spotify.html')}&` +
         `scope=${encodeURIComponent(user-read-private)}&` +
         `show_dialog=true`; // Force fresh login
     
