--- a/spotify.html
+++ b/spotify.html
@@ -528,7 +528,7 @@
         // Spotify API configuration
         const CLIENT_ID = '4fd59d9f62a94deb82340632ad0268b5'; 
         const REDIRECT_URI = "https://internetmonar.ch/spotify.html";
-        const SCOPES = 'user-library-read playlist-read-private user-read-recently-played user-read-private';
+        const SCOPES = 'user-read-email user-library-read playlist-read-private user-read-recently-played user-read-private';
 
         let accessToken = null;
         let currentSection = 'liked';
