--- a/spotify.html
+++ b/spotify.html
@@ -463,7 +463,7 @@
     </div>
 
     <div class="terminal-container">
-        <div class="terminal-line" style="animation-delay: 0s">SPOTIFY INTERFACE v2.1</div>
+        <div class="terminal-line" style="animation-delay: 0s">SPOTIFY INTERFACE v2.1 - THIS IS A WORK IN PROGRESS OAuth STILL NOT OPERATIONAL</div>
         <div class="terminal-line" style="animation-delay: 0.2s">----------------------------</div>
         <div class="terminal-line" style="animation-delay: 0.4s">> SYSTEM TIME: <span id="current-time"></span></div>
         <div class="terminal-line" style="animation-delay: 0.6s">> SPOTIFY API: Standby</div>
