--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
             "Available commands:",
             "------------------",
             "blog - Open the blog page",
+            "about - Show current admin information",
             "help - Show available commands",
             "clear - Clear the terminal",
             "",
