--- a/testchamber.html
+++ b/testchamber.html
@@ -498,14 +498,14 @@
                         <div class="player-button" onclick="toggleShuffle()">🔀</div>
                     </div>
                     <div class="track-list" id="track-list">
-                        <div class="track" onclick="playTrack(0)">1. Digital Crown</div>
-                        <div class="track" onclick="playTrack(1)">2. Bandwidth Dreams</div>
-                        <div class="track" onclick="playTrack(2)">3. Cyber Kingdom</div>
-                        <div class="track" onclick="playTrack(3)">4. Protocol Paradise</div>
-                        <div class="track" onclick="playTrack(4)">5. Internet Monarch (Title Track)</div>
-                        <div class="track" onclick="playTrack(5)">6. Virtual Throne</div>
-                        <div class="track" onclick="playTrack(6)">7. Data Stream Serenade</div>
-                        <div class="track" onclick="playTrack(7)">8. Online Oracle</div>
+                        <div class="track" onclick="playTrack(0)">1. </div>
+                        <div class="track" onclick="playTrack(1)">2. </div>
+                        <div class="track" onclick="playTrack(2)">3. </div>
+                        <div class="track" onclick="playTrack(3)">4. </div>
+                        <div class="track" onclick="playTrack(4)">5. </div>
+                        <div class="track" onclick="playTrack(5)">6. </div>
+                        <div class="track" onclick="playTrack(6)">7. </div>
+                        <div class="track" onclick="playTrack(7)">8. </div>
                     </div>
                 </div>
             </div>
@@ -523,23 +523,23 @@
                 <div class="folder-content">
                     <div class="folder-item">
                         <div class="folder-icon"></div>
-                        <span>Album Artwork</span>
+                        <span>Artwork</span>
                     </div>
                     <div class="folder-item">
                         <div class="folder-icon"></div>
-                        <span>Lyrics</span>
+                        <span>Thoughts</span>
                     </div>
                     <div class="folder-item">
                         <div class="folder-icon"></div>
-                        <span>Press Kit</span>
+                        <span>Blog</span>
                     </div>
                     <div class="folder-item">
                         <div class="folder-icon"></div>
-                        <span>Tour Dates</span>
+                        <span>Spam Folder</span>
                     </div>
                     <div class="folder-item">
                         <div class="folder-icon"></div>
-                        <span>Behind the Scenes</span>
+                        <span>Random shit</span>
                     </div>
                 </div>
             </div>
@@ -554,25 +554,7 @@
                 </div>
             </div>
             <div class="window-content">
-                <textarea class="notepad-content" placeholder="Welcome to Internet Monarch's digital realm...
 
-This is your space to take notes, write lyrics, or just jot down thoughts while you explore our musical kingdom.
-
-Feel free to write anything here - it's your personal notepad in our retro digital world!">Internet Monarch - Album Notes
-================================
-
-A journey through the digital landscape where music meets technology.
-
-Track 1: Digital Crown
-- Opening with ethereal synths
-- Building to powerful electronic beats
-- Represents taking control of your digital destiny
-
-Track 2: Bandwidth Dreams
-- Exploring the space between connection and isolation
-- Glitchy vocals over ambient soundscapes
-
-...</textarea>
             </div>
         </div>
 
@@ -588,13 +570,13 @@ Track 2: Bandwidth Dreams
                 <div class="about-content">
                     <div class="about-logo">IM</div>
                     <h2>Internet Monarch</h2>
-                    <p><strong>Digital Realm Explorer</strong></p>
+                    <p><strong>Data Archivist</strong></p>
                     <br>
-                    <p>Welcome to the kingdom where technology and creativity merge into something extraordinary.</p>
+                    <p>Welcome.</p>
                     <br>
-                    <p>Internet Monarch represents the sovereignty of digital expression, crafting soundscapes that bridge the virtual and the visceral.</p>
+                    <p>Internet Monarch represents a once niche community known as data archivists. The goal is to preserve digital and physical data.</p>
                     <br>
-                    <p><em>Version 1.0 - Retro Interface Edition</em></p>
+                    <p><em>Version 1.0 - Test Mode</em></p>
                     <p><em>© 2024 Internet Monarch</em></p>
                 </div>
             </div>
