--- a/testchamber.html
+++ b/testchamber.html
@@ -458,6 +458,7 @@
 </head>
 <body>
     <div class="desktop" id="desktop">
+          <a href="index.html" class="home-button">[HOME]</a>
         <!-- Desktop Icons -->
         <div class="desktop-icon" style="top: 30px; left: 30px;" data-window="music-player">
             <div class="icon-image icon-music"></div>
