--- a/testchamber.html
+++ b/testchamber.html
@@ -68,6 +68,26 @@
             border: 1px solid #00b4ff;
             background-color: rgba(0, 180, 255, 0.1);
         }
+        .home-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color: #00b4ff;
+            font-family: 'Courier New', monospace;
+            text-decoration: none;
+            text-shadow: 0 0 5px #0066ff;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 1rem;
+            padding: 5px;
+            opacity: 0.8;
+            transition: all 0.3s;
+        }
+        .home-button:hover {
+            opacity: 1;
+            text-shadow: 0 0 8px #00b4ff;
+        }
 
         .icon-label {
             color: #00b4ff;
