--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <body>
     <div class="header">
         <h1 class="title">INTERNET MONARCH</h1>
-        <p class="quote">"Maybe we're even more screwed up than he was but in socially acceptable ways."</p>
+        <p class="quote">I know what I was and I don't blame anybody.</p>
         <div class="nav-buttons">
             <a href="about.html" class="nav-button" style="color:#00ff88;">[ABOUT APE]</a>
             <a href="blog.html" class="nav-button">[BLOG]</a>
