Update personal facts in about.html

--- a/about.html
+++ b/about.html
@@ -189,9 +189,9 @@
 
         <div class="ape-fact">
 > PRIMARY:
-> - Oberservant
-> - Learning -> Linux, web dev, networking
-> - Broke -> Job hunting
+> - ********
+> - Learning -> Religion, UNIX Philospohy, Cooking
+> - Saving -> Enjoying this job
 > - 
         </div>
 
