Replace 'TEST CHAMBER' link with 'ART 01' and 'ART 02'

--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
         <div class="nav-buttons">
             <a href="about.html" class="nav-button" style="color:#00ff88;">[ABOUT APE]</a>
             <a href="blog.html" class="nav-button">[BLOG]</a>
-            <a href="testchamber.html" class="nav-button" style="color:#00ff88;">[TEST CHAMBER]</a>
+            <a href="art.html" class="nav-button" style="color:#00ff88;">[ART 01]</a>
+            <a href="art02.html" class="nav-button" style="color:#00ff88;">[ART 02]</a>
         </div>
     </div>
 
