--- a/music.html
+++ b/music.html
@@ -221,7 +221,7 @@
         // ADD YOUR AUDIO FILES HERE
         // Replace these with your actual file paths in the GitHub Pages repo
         const tracks = [
-            'media/audio/ICEpeak.mp3',
+            'media/audio/IC3peak Pain.mp3',
             'media/audio/track2.mp3',
             'media/audio/track3.mp3',
             'media/audio/track4.mp3',
