--- a/art02.html
+++ b/art02.html
@@ -109,7 +109,7 @@
         const textElement = document.getElementById('endless-text');
         let repeatCount = 200; // Start with more text
         
-        // Generate the endless text
+        // Generate the endless text bc 01 was limited lol
         let endlessQuestion = question.repeat(repeatCount);
         textElement.textContent = endlessQuestion;
         
