--- a/music.html
+++ b/music.html
@@ -222,7 +222,7 @@
         const tracks = [
             'media/audio/IC3peak Pain.mp3',
             'media/audio/Runnin.mp3',
-            'media/audio/track3.mp3',
+            'media/audio/broken.mp3',
             'media/audio/track4.mp3',
             'media/audio/track5.mp3'
         ];
