--- a/music.html
+++ b/music.html
@@ -223,7 +223,7 @@
             'media/audio/IC3peak Pain.mp3',
             'media/audio/Runnin.mp3',
             'media/audio/broken.mp3',
-            'media/audio/track4.mp3',
+            'media/audio/Prove Me Wrong.mp3',
             'media/audio/track5.mp3'
         ];
 
