--- a/music.html
+++ b/music.html
@@ -69,9 +69,9 @@
         .now-playing {
             text-align: center;
             margin-bottom: 30px;
-            color: white;
+            color: #ffff00;
             font-size: 1.2rem;
-            text-shadow: 0 0 8px white;
+            text-shadow: 0 0 15px #ffff00, 0 0 30px #ffaa00;
             min-height: 1.5rem;
         }
         .controls {
