--- a/music.html
+++ b/music.html
@@ -224,7 +224,7 @@
             'media/audio/Runnin.mp3',
             'media/audio/broken.mp3',
             'media/audio/Prove Me Wrong.mp3',
-            'media/audio/PRBLMS.mp3'
+            'media/audio/PRBLMS.mp3',
             'media/audio/HDMI.mp3'
         ];
 
