--- a/music.html
+++ b/music.html
@@ -225,7 +225,7 @@
             'media/audio/broken.mp3',
             'media/audio/Prove Me Wrong.mp3',
             'media/audio/PRBLMS.mp3',
-            'media/audio/HDMI.mp3'
+            'media/audio/HDMI.mp3',
         ];
 
         const audioPlayer = document.getElementById('audioPlayer');
