Update learning interests and secondary activities

--- a/about.html
+++ b/about.html
@@ -190,17 +190,17 @@
         <div class="ape-fact">
 > PRIMARY:
 > - ********
-> - Learning -> Religion, UNIX Philospohy, Cooking
+> - Learning -> Finance, UNIX Philospohy
 > - Saving -> Enjoying this job
-> - 
+> - Current TV Series > Landman
         </div>
 
         <div class="ape-fact">
 > SECONDARY:
 > [✓] Art and Data collections
-> [✓] Chasing meaning in life
+> [✓] Exploring friendships
 > [✓] God over all
-> [✓] Insomnia
+> [✓] 
         </div>
 
         <div class="ape-fact">
