--- a/linear.html
+++ b/linear.html
@@ -213,7 +213,7 @@
 
     <audio id="bgAudio" loop>
 
-        <source src="media/audio/youraudio.mp3" type="audio/mpeg">
+        <source src="media/audio/linear.mp3" type="audio/mpeg">
     </audio>
 
     <div class="audio-control" id="audioToggle">[SOUND: ON]</div>
