Change audio source from linear.mp3 to linear2.mp3

--- a/linear.html
+++ b/linear.html
@@ -210,7 +210,7 @@
     </div>
 
     <audio id="bgAudio" loop>
-        <source src="media/audio/linear.mp3" type="audio/mpeg">
+        <source src="media/audio/linear2.mp3" type="audio/mpeg">
     </audio>
 
     <div class="audio-control" id="audioToggle">[SOUND: ON]</div>
