Update image sources in linear.html

--- a/linear.html
+++ b/linear.html
@@ -246,8 +246,8 @@
 
         const images = [
             'media/images/Linear.jpg',
-            'media/images/image2.jpg',
-            'media/images/image3.jpg',
+            'media/images/Ruins.jpg',
+            'media/images/Girl2.jpg',
 
         ];
         
