--- a/music.html
+++ b/music.html
@@ -226,6 +226,7 @@
             'media/audio/Prove Me Wrong.mp3',
             'media/audio/PRBLMS.mp3',
             'media/audio/HDMI.mp3',
+            'media/audio/Summer.mp3',
         ];
 
         const audioPlayer = document.getElementById('audioPlayer');
