Add 'Ghost.mp3' to audio playlist

--- a/music.html
+++ b/music.html
@@ -227,6 +227,7 @@
             'media/audio/PRBLMS.mp3',
             'media/audio/HDMI.mp3',
             'media/audio/Summer.mp3',
+            'media/audio/Ghost.mp3',
         ];
 
         const audioPlayer = document.getElementById('audioPlayer');
